--- a/css/app.css
+++ b/css/app.css
@@ -230,6 +230,11 @@ body {
 #nav .user > ul > li {
   height: 44px;
 }
+#nav .menu ul li .active {
+  color: #fff;
+  background: #b3b3b3;
+  border-radius: 2px;
+}
 #nav .user > ul > li input {
   width: 100%;
   height: 28px;
@@ -783,6 +788,7 @@ body {
 }
 #userSet .emails .verified {
   color: lightblue;
+  cursor: pointer;
 }
 #userSet .emails li:first-child .verified {
   color: #000;
@@ -796,6 +802,7 @@ body {
 }
 #userSet .emails .delet {
   width: 6%;
+  cursor: pointer;
 }
 #userSet .password {
   margin: 40px 0;
@@ -919,7 +926,9 @@ body {
   font-size: 14px;
 }
 #access .login .user,
-#access .login .pwd {
+#access .login .pwd,
+#access .login .user input:focus,
+#access .login .pwd input:focus {
   background: #eaeaea;
 }
 #access .login .sign-in {
