--- a/less/app.less
+++ b/less/app.less
@@ -267,6 +267,12 @@ body {
 	height: 44px;
 }
 
+#nav .menu ul li .active {
+	color: @white;
+	background: #b3b3b3;
+	border-radius: @baseRadius; 
+}
+
 #nav .user > ul > li input {
 	width: 100%;
 	height: 28px;
@@ -925,10 +931,12 @@ body {
 
 #userSet .emails .verified {
 	color: @blue;
+	cursor: pointer;
 }
 
 #userSet .emails li:first-child .verified {
 	color: #000;
+	// cursor: default;
 }
 
 #userSet .emails .addr {
@@ -941,6 +949,7 @@ body {
 
 #userSet .emails .delet {
 	width: 6%;
+	cursor: pointer;
 }
 
 
@@ -1085,7 +1094,7 @@ body {
 	font-size: 14px;
 }
 
-#access .login .user, #access .login .pwd {
+#access .login .user, #access .login .pwd, #access .login .user input:focus, #access .login .pwd input:focus {
 	background: #eaeaea; 
 }
 
