--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -1,9 +1,9 @@
 <nav class="row" id="nav">
   <div class="col-xs-12 col-md-6 menu">
     <ul>
-      <li><a href="javascript:void(0)" (click)="linkComp('repositories')"><img src="img/logo.png" alt="dockyard" /></a></li>
-      <li><a href="javascript:void(0)" (click)="linkComp('repositories')">Repositories</a></li>
-      <li><a href="javascript:void(0)" (click)="linkComp('organizations')">Organizations</a></li>
+      <li><a href="javascript:void(0)" (click)="linkComp('repositories','repo')"><img src="img/opshub.png" alt="dockyard" /></a></li>
+      <li><a href="javascript:void(0)" (click)="linkComp('repositories','repo')" [ngClass]=" active=== 'repo'? 'active' : '' ">Repositories</a></li>
+      <li><a href="javascript:void(0)" (click)="linkComp('organizations','org')" [ngClass]=" active=== 'org'? 'active' : '' ">Organizations</a></li>
     </ul>
   </div>
   <div class="col-xs-12 col-md-6 user">
@@ -20,7 +20,7 @@
         <a id="#userSetting" data-toggle="dropdown"><i class="fa fa-user"></i>User</a>
         <ul class="dropdown-menu" id="userSetting">
           <li><a href="javascript:void(0)" (click)="linkComp('userSetting')"><i class="fa fa-book"></i>Setting</a></li>
-          <li><a href="###"><i class="fa fa-users"></i>Login Out</a></li>
+          <li><a href="javascript:void(0)" (click)="loginOut()"><i class="fa fa-users"></i>Login Out</a></li>
         </ul>
       </li>
     </ul>
