--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -4,31 +4,68 @@
     <span class="text">Sign in the container repository</span>
   </div>
   <div class="content">
-    <div class="login">
+    <div class="login" *ngIf="active === 'login'">
       <span class="space user">
-        <input type="text" placeholder="Username or Email" [(ngModel)]="user.username" name="username">
+        <input type="text" placeholder="Username or Email" [(ngModel)]="user.username" name="username" autocomplete="off">
+        <i class="fa fa-user"></i>
       </span>
       <span class="space pwd">
-        <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password">
+        <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
+        <i class="fa fa-lock"></i>
       </span>
       <button class="space sign-in" (click)="login()">Sign in</button>
-      <a href="###" class="forget-pwd">Forgot your password ?</a>
+      <a href="javascript:void(0)" class="forget-pwd" (click)="changeNav('forget-pwd')">Forgot your password ?</a>
       <div class="space">
         <span class="pull-left google">
-          Sign in with <i class="fa fa-star"></i>
+          Sign in with <i class="fa fa-glide-g mar-lt-five"></i>
         </span>
         <span class="pull-right github">
-          Sign in with <i class="fa fa-star"></i>
+          Sign in with <i class="fa fa-github mar-lt-five"></i>
         </span>
       </div>
     </div>
-    <div class="sign-up"></div>
+    <div class="sign-up" *ngIf="active==='sign-up'">
+      <span class="space user">
+        <input type="text" placeholder="Username" [(ngModel)]="user.username" name="username" autocomplete="off">
+        <i class="fa fa-user"></i>
+      </span>
+      <span class="space user">
+        <input type="text" placeholder="email" [(ngModel)]="user.email" name="email" autocomplete="off">
+        <i class="fa fa-envelope"></i>
+      </span>
+      <span class="space pwd">
+        <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
+        <i class="fa fa-lock"></i>
+      </span>
+      <button class="space sign-in" (click)="signUp()">Sign Up</button>
+    </div>
+    <div class="login forget-pwd" *ngIf="active==='forget-pwd'">
+      <span class="space">
+        Enter your email address and we will send you a link to reset your password
+      </span>
+      <span class="space user">
+        <input type="text" placeholder="email" [(ngModel)]="user.email" name="email" autocomplete="off">
+        <i class="fa fa-envelope"></i>
+      </span>
+      <button class="space sign-in" (click)="sendEmail()">Send</button>
+    </div>
+    <div class="login reset-pwd" *ngIf="active==='reset-pwd'">
+      <span class="space pwd">
+        <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
+        <i class="fa fa-lock"></i>
+      </span>
+      <span class="space pwd">
+        <input type="password" placeholder="Comfirm Password" [(ngModel)]="user['re-password']" name="re-password" autocomplete="off">
+        <i class="fa fa-lock"></i>
+      </span>
+      <button class="space sign-in" (click)="resetPwd()">Save</button>
+    </div>
   </div>
   <div class="row footer">
     <p class="col-md-7 col-md-offset-1 col-xs-12 intro" >
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. A rerum vel est quae accusamus adipisci odio im. Ipsam.
     </p>
-    <p class="col-md-2 col-md-offset-1 col-xs-12 team">
+    <p class="col-md-3 col-xs-12 team">
       <span class="space">Privacy</span>
       <span class="space">About</span>
       <span class="space">Teams</span>
@@ -38,11 +75,12 @@
   <div class="navbar">
     <div class="logo"><img src="img/opshub.png" /></div>
     <div class="menu">
-      <a href="###" class="space">Privacy</a>
-      <a href="###" class="space">About</a>
-      <a href="###" class="space">Teams</a>
-      <a href="javascript:void(0)" class="space">Login</a>
-      <a href="###" class="space-remain">.</a>
+      <a href="javascript:void(0)" class="space">Browse</a>
+      <a href="javascript:void(0)" class="space">Tutorial</a>
+      <a href="javascript:void(0)" class="space">Docs</a>
+      <a href="javascript:void(0)" class="space" [ngClass]="active==='login' ? 'active' : '' " (click)="changeNav('login')">Login</a>
+      <a href="javascript:void(0)" class="space" [ngClass]="active==='sign-up' ? 'active' : '' " (click)="changeNav('sign-up')">Sign Up</a>
+      <a href="javascript:void(0)" class="space-remain">.</a>
     </div>
   </div>
 </div>
