--- a/less/app.less
+++ b/less/app.less
@@ -25,6 +25,9 @@ input, textarea, select, button, input:focus, textarea:focus, select:focus, butt
 	border: none;
 }
 
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
+	background: none !important;
+}
 .relative {
 	position: relative;
 }
@@ -53,9 +56,21 @@ input, textarea, select, button, input:focus, textarea:focus, select:focus, butt
 	margin-left: 10px;
 }
 
+.mar-lt-five {
+	margin-left: 5px;
+}
+
 .mar-tb-twenty {
 	margin-top: 20px;
 	margin-bottom: 20px;
+}
+
+.mar-t-twenty {
+	margin-top: 20px;
+}
+
+.pad-no {
+	padding: 0;
 }
 
 .over-hidden {
@@ -360,38 +375,55 @@ body {
 
 #repoList .media-repo {
 	margin-top: @baseMargin+30px;
+	overflow: hidden;
+	height: 390px;
 }
 
 #repoList .repo-left {
-	border-top: 1px solid #000;
+	height: 100%;
+	background: #eaeaea;
+	padding: 0;
+	border-radius: 3px;
 }
 
 #repoList .repo-left span {
 	display: inline-block;
-	width: 90%;
-	height: 40px;
-	line-height: 40px;
-	text-overflow:ellipsis;
+	width: 100%;
+	padding: 12px 20px;
+	text-overflow: ellipsis;
+	color: #fff;
 }
 
 #repoList .repo-left span:first-child {
-	border-bottom: 1px solid #b3b3b3;
-	height: 40px;
 	font-size: 16px;
-	color: #000;
+	border-radius: 3px 3px 0 0;
+}
+
+#repoList .repo-left .bg-orange {
+	background: #ff5400;
+}
+
+#repoList .repo-left .bg-blue {
+	background: @blue;
+}
+
+#repoList .repo-body {
+	padding-left: 5px;
 }
 
 #repoList .repo-body a {
 	display: inline-block;
-	width: 42%;
+	width: e("calc( (100% - 5px) /2)");
+	width: e("-webkit-calc( (100% - 5px) /2)");
 	padding: 12px;
-	margin-bottom: @baseMargin+10px;
+	margin-bottom: 5px;
 	background: #eaeaea;
 	vertical-align: top;
+	border-radius: 3px;
 }
 
 #repoList .repo-body a:nth-child(2n) {
-	margin-left: 8%;
+	margin-left: 5px;
 }
 
 #repoList .repo-body h3{
@@ -401,6 +433,8 @@ body {
 
 #repoList .repo-body h5 {
 	font-size: 16px;
+	height: 40px;
+	overflow: hidden;
 }
 
 #repoList .star-fork {
@@ -650,47 +684,51 @@ body {
 	margin-top: @baseMargin+40px;
 }
 
-#orgList {
+#orgList, #repoList {
 	margin-top: @baseMargin+30px;
 }
 
-#orgList .title {
+#orgList .title, #repoList .title {
 	font-size: 16px;
 }
 
-#orgList .title button {
-	background: @white;
-	color: @gray;
+#orgList .title button,
+#repoList .title button {
+	background: @blue;
+	color: @white;
 	padding: 10px 20px;
-	border: 1px solid @blue;
-	border-radius: 24px;
+	border-radius: 3px;
 }
 
-#orgList .title button:hover, #orgList .title button:focus, #orgList .title button:active {
+#orgList .title button:hover, 
+#orgList .title button:focus, 
+#orgList .title button:active,
+#repoList .title button:hover, 
+#repoList .title button:focus, 
+#repoList .title button:active {
 	color: @white;
 	background: @blue;
 }
 
 #orgList .media-org {
-	border: 1px solid #d7d7d7;
-	border-radius: 16px;
+	background: @white;
 	margin-top: @baseMargin+30px;
-	width: 90%;
-	margin-left: 5%;
-	padding: 24px 0;
+	width: 100%;
+	padding: 10px 0;
+	height: 200px;
 }
 
 #orgList .org-left, #orgList .org-body {
-	display: inline-block;
-	// padding: 24px 12px;
+	float: left;
 }
 
 #orgList .org-left {
 	width: 35%;
-	padding: 20px 10px;
-	border-right: 1px solid #d7d7d7;
+	height: 100%;
+	padding: 50px 10px;
+	border-right: 1px solid #eaeaea;
 	text-align: center;
-	vertical-align: super;
+	overflow: hidden;
 }
 
 #orgList .org-body {
@@ -712,15 +750,17 @@ body {
 	width: 60px;
 	height: 60px;
 	max-width: 100%;
-	border: 1px solid @gray;
-	border-radius: 50%;
+	background: #eaeaea;
+	border-radius: 5px;
 	padding: 10px;
 }
 
 #orgList .org-left span {
 	display: block;
 	width: 100%;
-	margin-top: @baseMargin+5px;
+	max-height: 50px;
+	overflow: hidden;
+	margin-top: 5px;
 	font-size: 16px;
 }
 
@@ -1074,31 +1114,44 @@ body {
 
 #access .content {
 	width: 300px;
-	margin: 80px auto;
+	margin: 100px auto;
 }
 
-#access .login .space {
+#access .login .space, #access .sign-up .space {
 	display: block;
 	width: 100%;
 	margin-bottom: 20px;
 	border-radius: 5px;
 	padding: 10px 0;	
 	font-size: 14px;
+	position: relative;
 }
 
-#access .login input {
+#access .login input, #access .sign-up input {
 	width: 100%;
-	padding: 0 12px;
+	padding: 0 32px 0 12px;
 	background: #eaeaea;
 	color: #b3b3b3;
 	font-size: 14px;
 }
 
-#access .login .user, #access .login .pwd, #access .login .user input:focus, #access .login .pwd input:focus {
+#access .login .space > i, #access .sign-up .space > i {
+	position: absolute;
+	right: 9px;
+	top: 12px;
+	color: #b3b3b3;
+	font-size: 14px;
+}
+#access .login .user, #access .login .pwd, #access .login .user input:focus, #access .login .pwd input:focus,
+#access .sign-up .user, #access .sign-up .pwd, #access .sign-up .user input:focus, #access .sign-up .pwd input:focus {
 	background: #eaeaea; 
 }
 
-#access .login .sign-in {
+#access .ng-untouched, #access .ng-valid, #access .ng-dirty {
+	background: #eaeaea;
+}
+
+#access .login .sign-in, #access .sign-up .sign-in {
 	background: lightblue;
 	color: #fff;
 }
@@ -1170,8 +1223,13 @@ body {
 	color: #fff;
 }
 
+#access .menu .space.active {
+	background: none;
+	color: #fff;
+}
+
 #access .menu .space-remain {
-	width: 40%;
+	width: 25%;
 	float: left;
 	background: #fff;
 	opacity: 0.75;
@@ -1186,7 +1244,7 @@ body {
 		width: 70%;
 	}
 	#access .menu .space {
-		width: 25%;
+		width: 20%;
 	}
 	#access .menu .space-remain {
 		width: 0;
