--- a/templates/organization/orgList.html
+++ b/templates/organization/orgList.html
@@ -1,25 +1,16 @@
 <div id="orgList">
-  <p class="col-xs-10 col-xs-offset-1 title">
-    <span class="pull-left">Organizations & Teams</span>
-    <button class="pull-right cursor-point">
-      <i class="fa fa-plus"></i>
-      Create Organization
-    </button>
-  </p>
   <div class="row">
-   <!--  <div class="col-xs-10 col-md-10 col-xs-offset-1 col-md-offset-1">
-      <div class="media-org">
-        <a href="javascript:void(0)" class="org-left">
-          <img src="img/logo.png"/>
-          <span>org name</span>
-        </a>
-        <a href="javascript:void(0)" class="org-body">
-          <span>3575</span><br/>
-          <small>repo num</small>
-        </a>          
-      </div>      
-    </div> -->
-    <div class="col-xs-10 col-md-4" *ngFor="let org of orgList">
+    <div class="col-md-10 col-md-offset-1 col-xs-12 title">
+      <p class="col-xs-12 col-md-4 pad-no">
+        <button class="cursor-point" (click)="orgCreate('orgCreate')">
+          <i class="fa fa-plus"></i>
+          Create Organization
+        </button>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <!-- <div class="col-xs-10 col-md-4" *ngFor="let org of orgList">
       <div class="media-org">
         <a href="javascript:void(0)" class="org-left">
           <img src={{org.gravatar}}/>
@@ -32,6 +23,24 @@
           <small>repo num</small></p>
         </a>          
       </div>      
+    </div> -->
+    <div class="col-md-10 col-md-offset-1 col-xs-12 pad-no">
+      <div class="row">
+        <div class="col-xs-12 col-md-4" *ngFor="let org of orgList">
+          <div class="media-org">
+            <a href="javascript:void(0)" class="org-left">
+              <img src={{org.gravatar}}/>
+              <span>{{org.name}}</span>
+            </a>
+            <a href="javascript:void(0)" class="org-body">
+              <p class="mar-t-twenty"><span>{{org.teams}}</span><br/>
+              <small>team num</small></p>
+              <p class="mar-t-twenty"><span>{{org.repositories}}</span><br/>
+              <small>repo num</small></p>
+            </a>          
+          </div>      
+        </div>
+      </div>
     </div>
   </div>
 </div>
