modify repo create css & org create css

--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,9 @@ select:-webkit-autofill {
 .mar-tp-no {
   margin-top: 0;
 }
+.mar-rt-no {
+  margin-right: 0;
+}
 .mar-lt {
   margin-left: 10px;
 }
@@ -61,6 +64,9 @@ select:-webkit-autofill {
 }
 .mar-t-twenty {
   margin-top: 20px;
+}
+.mar-bt-twenty-five {
+  margin-bottom: 25px;
 }
 .pad-no {
   padding: 0;
@@ -79,6 +85,9 @@ select:-webkit-autofill {
 }
 .row {
   margin: 0;
+}
+html {
+  font-size: 62.5%;
 }
 body {
   font-size: 12px;
@@ -197,14 +206,13 @@ body {
 #nav .menu a,
 #nav .user a {
   font-size: 14px;
-  color: #b3b3b3;
 }
 #nav a:hover,
 #nav a:active,
 #createRepo a:hover,
 #createRepo:active {
   color: #fff;
-  background: #b3b3b3;
+  background: lightblue;
   border-radius: 2px;
 }
 #createRepo a:hover,
@@ -217,39 +225,50 @@ body {
   width: 50px;
   height: 100%;
 }
-#nav .menu ul {
-  width: 70%;
-  float: left;
-  overflow: hidden;
+#nav .user {
+  float: right;
 }
-#nav .menu ul li a,
-#nav .user > ul > li > a {
+#nav .menu li a,
+#nav .user > li > a {
   padding: 0 12px;
   height: 28px;
   line-height: 28px;
   margin-top: 9px;
-  margin-left: 12px;
+  margin-right: 12px;
+  color: #fff;
 }
-#nav .user > ul > li > a {
+#nav .menu .logo,
+#nav .menu .logo:hover,
+#nav .menu .logo:active {
+  background: none;
+}
+#nav .menu .logo a,
+#nav .menu .logo a:hover,
+#nav .menu .logo a:active {
+  padding: 0;
+  background: none;
+  margin-right: 30px;
+}
+#nav .user > li > a {
   padding: 0;
 }
-#nav .menu ul li a,
-#nav .user > ul > li {
+#nav .menu li a,
+#nav .user > li {
   float: left;
 }
-#nav .user > ul > li > a {
+#nav .user > li > a {
   display: inline-block;
-  width: 120px;
+  padding: 0 12px;
 }
-#nav .user > ul > li {
+#nav .user > li {
   height: 44px;
 }
-#nav .menu ul li .active {
+#nav .menu li .active {
   color: #fff;
-  background: #b3b3b3;
+  background: lightblue;
   border-radius: 2px;
 }
-#nav .user > ul > li input {
+#nav .user > li input {
   width: 100%;
   height: 28px;
   margin-top: 8px;
@@ -258,15 +277,18 @@ body {
   background: #e7e7e7;
   font-size: 14px;
 }
-#nav .user > ul > li input:focus {
+#nav .user > li input:focus {
   background: #fff;
+}
+#nav .user li:first-child {
+  margin-right: 12px;
 }
 #createRepo,
 #userSetting {
   width: 200px;
-  background: #000;
+  background: #eaeaea;
   position: absolute;
-  top: 44px;
+  top: 42px;
   left: -66px;
   z-index: 10000;
 }
@@ -274,14 +296,14 @@ body {
   width: 120px;
   left: 12px;
 }
-#createRepo ul li,
-#createRepo ul li a,
-#userSetting ul li,
-#userSetting ul li a {
+#createRepo li,
+#createRepo li a,
+#userSetting li,
+#userSetting li a {
   width: 100%;
 }
-#createRepo ul li,
-#userSetting ul li {
+#createRepo li,
+#userSetting li {
   height: 44px;
 }
 #createRepo a,
@@ -416,7 +438,7 @@ body {
   height: 40px;
   line-height: 40px;
   text-align: center;
-  border-radius: 50%;
+  border-radius: 5px;
   font-size: 16px;
   background: gainsboro;
   color: #fff;
@@ -425,52 +447,52 @@ body {
   left: -20px;
 }
 .step-brown {
-  background: #c9caaa !important;
+  background: lightblue !important;
 }
 #newRepo li:last-child span {
   top: 5px;
 }
 #newRepo li b {
   font-size: 16px;
+  margin-top: 10px;
   font-weight: normal;
   display: inline-block;
   width: calc(100% - 52px);
   width: -webkit-calc(100% - 52px);
 }
 #newRepo .info {
-  background: gainsboro;
-  padding: 24px 20px;
+  padding: 0;
 }
 #newRepo input,
 #newRepo textarea {
-  width: 95%;
-  padding: 12px;
+  width: 100%;
+  padding: 10px;
   font-size: 16px;
-  background: none;
-  color: #fff;
-  border-bottom: 1px solid #fff;
+  background: #d7d7d7;
+  border-radius: 5px;
 }
 #newRepo input::-webkit-input-placeholder,
 #newRepo textarea::-webkit-input-placeholder {
-  color: #fff;
+  color: #b3b3b3;
 }
 #newRepo textarea {
-  height: 200px;
-  border: 1px solid #fff;
+  height: 250px;
+  over-x: hidden;
+  resize: vertical;
 }
 #newRepo .visible-type {
   margin: 15px auto 25px;
   font-size: 16px;
+  padding-left: 10px;
 }
 #newRepo .visible-type > span {
   display: inline-block;
   width: 65px;
-  color: #fff;
 }
 #newRepo .visible-type label {
-  color: #fff;
   width: calc(95% - 65px);
   width: -webkit-calc(95% - 65px);
+  font-weight: normal;
 }
 #newRepo .visible-type input {
   width: 18px;
@@ -484,29 +506,38 @@ body {
   border: none;
 }
 #newRepo .visible-type input:last-child {
-  margin-left: 10px;
+  margin-left: 12px;
+}
+#newRepo .clear-gap {
+  font-size: 0;
 }
 #newRepo select {
-  width: calc(95% - 60px);
-  width: -webkit-calc(95% - 60px);
+  width: 42%;
   padding: 12px;
+  background: #d7d7d7;
   color: #b3b3b3;
+  margin-right: 3%;
+  border-radius: 5px;
+  font-size: 12px;
+}
+#newRepo select + input {
+  width: 55%;
 }
 #newRepo option {
   padding: 12px;
 }
 #newRepo .btn-create {
   font-size: 16px;
-  width: 70px;
+  width: 100%;
   height: 40px;
   line-height: 40px;
   text-align: center;
   border-radius: 2px;
   color: #fff;
-  background: #b3b3b3;
+  background: #d7d7d7;
 }
 #newRepo .btn-create:hover {
-  background: #c9caaa;
+  background: lightblue;
 }
 /* repo create end */
 /* repo detail start */
@@ -657,11 +688,9 @@ body {
   width: 100%;
 }
 #createOrg .guide {
-  width: 37%;
   font-size: 16px;
 }
 #createOrg .steps {
-  width: 80%;
   margin: 0 auto;
 }
 #createOrg .step-nav {
@@ -670,8 +699,15 @@ body {
   margin-top: 20px;
   text-align: center;
 }
+#createOrg .create .space,
+#createOrg .guide {
+  margin-left: calc(33.3% / 2 - 20px);
+  margin-left: -webkit-calc(33.3% / 2 - 20px);
+  margin-right: calc(33.3% / 2 - 20px);
+  margin-right: -webkit-calc(33.3% / 2 - 20px);
+}
 #createOrg li {
-  width: 25%;
+  width: 33.3%;
   border-bottom: 1px solid #b3b3b3;
   float: left;
 }
@@ -680,7 +716,7 @@ body {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  border-radius: 50%;
+  border-radius: 5px;
   font-size: 16px;
   text-align: center;
   color: #fff;
@@ -688,13 +724,14 @@ body {
   position: relative;
   top: 20px;
 }
-#createOrg .create {
-  width: 80%;
-  margin: 60px auto 0;
-  padding: 12px 24px;
-  background: #fff;
+#createOrg li i {
+  margin-top: 12px;
 }
-#createOrg .first-step input {
+#createOrg .create {
+  margin: 60px auto 0;
+}
+#createOrg .first-step input,
+#createOrg .first-step .save {
   width: 100%;
   height: 40px;
   line-height: 40px;
@@ -702,14 +739,12 @@ body {
   padding: 0 12px;
   font-size: 14px;
   border-radius: 5px;
-  border: 1px solid #d7d7d7;
+  background: #d7d7d7;
 }
 #createOrg .first-step .save {
-  font-size: 16px;
   color: #fff;
-  padding: 12px 20px;
-  border-radius: 5px;
-  background: #eaeaea;
+  background: #b3b3b3;
+  font-size: 16px;
 }
 /* org create end */
 /* user setting */
