--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -1,28 +1,30 @@
 <nav class="row" id="nav">
-  <div class="col-xs-12 col-md-6 menu">
-    <ul>
-      <li><a href="javascript:void(0)" (click)="linkComp('repositories','repo')"><img src="img/opshub.png" alt="dockyard" /></a></li>
-      <li><a href="javascript:void(0)" (click)="linkComp('repositories','repo')" [ngClass]=" active=== 'repo'? 'active' : '' ">Repositories</a></li>
-      <li><a href="javascript:void(0)" (click)="linkComp('organizations','org')" [ngClass]=" active=== 'org'? 'active' : '' ">Organizations</a></li>
-    </ul>
-  </div>
-  <div class="col-xs-12 col-md-6 user">
-    <ul class="pull-right">
-      <li><input type="text" placeholder="search" /></li>
-      <li class="relative">
-        <a id="#createRepo" data-toggle="dropdown"><i class="fa fa-plus"></i>Create</a>
-        <ul class="dropdown-menu" id="createRepo">
-          <li><a href="javascript:void(0)" (click)="linkComp('repoCreate')"><i class="fa fa-book"></i>Create Repository</a></li>
-          <li><a href="javascript:void(0)" (click)="linkComp('orgCreate')"><i class="fa fa-users"></i>Create Organization</a></li>
+  <div class="col-xs-12 col-md-10 col-md-offset-1">
+    <div class="row">
+      <ul class="col-xs-12 col-md-6 pad-no menu">
+        <li class="logo"><a href="javascript:void(0)" (click)="linkComp('repositories','repo')"><img src="img/opshub_03.png" alt="dockyard"/></a></li>
+        <li><a href="javascript:void(0)" (click)="linkComp('repositories','repo')" [ngClass]=" active=== 'repo'? 'active' : '' ">Repositories</a></li>
+        <li><a href="javascript:void(0)" (click)="linkComp('organizations','org')" [ngClass]=" active=== 'org'? 'active' : '' ">Organizations</a></li>
+      </ul>
+      <div class="col-xs-12 col-md-6 pad-no">
+        <ul class="user">
+          <li><input type="text" placeholder="search" /></li>
+          <li class="relative">
+            <a id="#createRepo" data-toggle="dropdown"><i class="fa fa-plus"></i>Create</a>
+            <ul class="dropdown-menu" id="createRepo">
+              <li><a href="javascript:void(0)" (click)="linkComp('repoCreate')"><i class="fa fa-book"></i>Create Repository</a></li>
+              <li><a href="javascript:void(0)" (click)="linkComp('orgCreate')"><i class="fa fa-users"></i>Create Organization</a></li>
+            </ul>
+          </li>
+          <li class="relative">
+            <a id="#userSetting" class="mar-rt-no" data-toggle="dropdown"><i class="fa fa-user"></i>User</a>
+            <ul class="dropdown-menu" id="userSetting">
+              <li><a href="javascript:void(0)" (click)="linkComp('userSetting')"><i class="fa fa-book"></i>Setting</a></li>
+              <li><a href="javascript:void(0)" (click)="loginOut()"><i class="fa fa-users"></i>Login Out</a></li>
+            </ul>
+          </li>
         </ul>
-      </li>
-      <li class="relative">
-        <a id="#userSetting" data-toggle="dropdown"><i class="fa fa-user"></i>User</a>
-        <ul class="dropdown-menu" id="userSetting">
-          <li><a href="javascript:void(0)" (click)="linkComp('userSetting')"><i class="fa fa-book"></i>Setting</a></li>
-          <li><a href="javascript:void(0)" (click)="loginOut()"><i class="fa fa-users"></i>Login Out</a></li>
-        </ul>
-      </li>
-    </ul>
+      </div>    
+    </div>
   </div>
 </nav>
