--- a/templates/organization/orgCreate.html
+++ b/templates/organization/orgCreate.html
@@ -1,39 +1,70 @@
-<div id="createOrg">
-  <div class="steps">
-    <p class="guide">
-      Organizations can have multiple Teams. Teams can have differing permissions. Namespace is unique and this is where repositories for this organization will be created. 
-    </p>
-    <ul class="step-nav">
-      <li><span [ngClass]=" step=== 1? 'step-brown' : '' ">1</span></li>
-      <li><span [ngClass]=" step=== 2? 'step-brown' : '' ">2</span></li>
-      <li><span [ngClass]=" step=== 3? 'step-brown' : '' ">3</span></li>
-      <li><span [ngClass]=" step=== 4? 'step-brown' : '' ">4</span></li>
-    </ul>
-  </div>
-  <div class="create">
-    <div class="first-step" *ngIf="step===1">
-      <input type="text" placeholder="Namespace"  [(ngModel)]="org.namespace" name="namespace"/>
-      <input type="text" placeholder="Organization Name" [(ngModel)]="org['full-name']" name="orgname"/>
-      <input type="text" placeholder="description" [(ngModel)]="org.description" name="description"/>
-      <input type="text" placeholder="Location" [(ngModel)]="org.location" name="location"/>
-      <input type="text" placeholder="Gravatar Email" [(ngModel)]="org.gravatar" name="gravatar"/>
-      <input type="text" placeholder="Email" [(ngModel)]="org.email" name="email"/>
-      <input type="text" placeholder="Website URL" [(ngModel)]="org.url" name="url"/>
-      <button class="save" (click)="saveOrgInfo(2)">Create</button>
-    </div>
-    <div class="second-step" *ngIf="step===2">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, est ex quod ipsum perferendis, adipisci fugiat, a qui modi voluptate laborum eius aliquid nam similique. Dolorem numquam nobis, velit! Molestiae.
-      <button class="save" (click)="saveOrgInfo(3)">Create</button>
-    </div>
-    <div class="third-step" *ngIf="step===3">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis cupiditate obcaecati, non animi laborum soluta incidunt recusandae maxime dolorem quia est illo, quas ut nesciunt quasi unde neque laudantium pariatur!
-      <button class="save" (click)="saveOrgInfo(4)">Create</button>
-    </div>
-    <div class="forty-step" *ngIf="step===4">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis cupiditate obcaecati, non animi laborum soluta incidunt recusandae maxime dolorem quia est illo, quas ut nesciunt quasi unde neque laudantium pariatur!
-      <button class="save" (click)="saveOrgInfo()">Create</button>
+<div class="row">
+  <div class="col-xs-12 col-md-10 col-md-offset-1">
+    <div id="createOrg">
+      <div class="row">
+        <div class="col-xs-12 steps">
+          <div class="row">
+            <p class="guide">
+              Organizations can have multiple Teams. Teams can have differing permissions. Namespace is unique and this is where repositories for this organization will be created. 
+            </p>
+          </div>        
+          <ul class="step-nav">
+            <li><span [ngClass]=" step=== 1? 'step-brown' : '' "><i class="fa fa-font-awesome"></i></span></li>
+            <li><span [ngClass]=" step=== 2? 'step-brown' : '' "><i class="fa fa-users"></i></span></li>
+            <li><span [ngClass]=" step=== 3? 'step-brown' : '' "><i class="fa fa-cube"></i></span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 create" id="newRepo">
+          <div class="row">
+            <div class="space">
+              <div class="first-step" *ngIf="step===1">
+                <input type="text" placeholder="Namespace"  [(ngModel)]="org.namespace" name="namespace"/>
+                <input type="text" placeholder="Organization Name" [(ngModel)]="org['full-name']" name="orgname"/>
+                <input type="text" placeholder="Description" [(ngModel)]="org.description" name="description"/>
+                <input type="text" placeholder="Location" [(ngModel)]="org.location" name="location"/>
+                <input type="text" placeholder="Gravatar Email" [(ngModel)]="org.gravatar" name="gravatar"/>
+                <input type="text" placeholder="Email" [(ngModel)]="org.email" name="email"/>
+                <input type="text" placeholder="Website URL" [(ngModel)]="org.url" name="url"/>
+                <button class="save" (click)="saveOrgInfo(2)">Create</button>
+              </div>
+              <div class="second-step" *ngIf="step===2">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, est ex quod ipsum perferendis, adipisci fugiat, a qui modi voluptate laborum eius aliquid nam similique. Dolorem numquam nobis, velit! Molestiae.
+                <button class="save" (click)="saveOrgInfo(3)">Create</button>
+              </div>
+              <div class="third-step" *ngIf="step===3">
+                <div class="info">
+                  <p class="mar-bt-twenty-five clear-gap">
+                    <select [(ngModel)]="repo.username" name="username">
+                      <option value="1">dockyard</option>
+                      <option value="2">surface</option>
+                    </select>
+                    <input type="text" placeholder="name" [(ngModel)]="repo.repository" name="repository"/>
+                  </p>
+                  <p class="mar-bt-twenty-five">
+                    <input type="text" placeholder="short descript" (focus)="changeStep(3)" [(ngModel)]="repo.short" name="short"/>
+                  </p>
+                  <textarea placeholder="full descript" (focus)="changeStep(4)" [(ngModel)]="repo.description" name="description"></textarea>
+                  <div class="visible-type">
+                    <span>visibility:</span>
+                    <label>
+                      <input type="radio" name="visibility" value="public" (focus)="changeStep(5)" [(ngModel)]="repo.privilege" name="privilege"/>public
+                      <input type="radio" name="visibility" value="private" (focus)="changeStep(5)" [(ngModel)]="repo.privilege" name="privilege"/>private
+                    </label>
+                    <!-- <select>
+                      <option value="0">public</option>
+                      <option value="1">private</option>
+                    </select> -->
+                  </div>
+                  <button class="btn-create" (click)="saveRepoInfo()">Create</button>
+                </div>
+                <!-- <button class="save" (click)="saveOrgInfo()">Create</button> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>     
     </div>
   </div>
 </div>
-
-
