--- a/less/app.less
+++ b/less/app.less
@@ -240,6 +240,7 @@ body {
 
 #nav .menu, #nav .user {
 	height: 100%;
+	margin: 0;
 }
 
 #nav .menu a, #nav .user a {
@@ -299,6 +300,7 @@ body {
 
 #nav .user > li {
 	height: 44px;
+	position: relative;
 }
 
 #nav .menu li .active {
@@ -330,8 +332,74 @@ body {
 	background: #eaeaea;
 	position: absolute;
 	top: 42px;
-	left: -66px;
+	left: 0px;
 	z-index: 10000;
+}
+
+@media screen and (max-width: 840px) {
+	#nav .user li:first-child {
+		display: none;
+	}
+
+	#nav .user {
+		float: right;
+	}
+}
+
+@media screen and (max-width: 642px) {
+	#nav .user .create {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	#nav .menu-rt {
+		width: 40%;
+	}
+
+	#nav .menu {
+		width: 60%;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	#nav .menu-rt {
+		width: 20%;
+	}
+
+	#nav .menu {
+		width: 80%;
+	}
+
+	#nav .user > li > a {
+		padding: 0 3px;
+	}
+
+	#nav .menu .logo a {
+		margin-right: 15px;
+	}
+}
+
+@media screen and (max-width: 425px) {
+	// #nav .user > li > a {
+	// 	margin-right: 0;
+	// }
+	
+	#nav .menu {
+		width: 70%;
+	}
+
+	#nav .menu-rt {
+		width: 30%;
+	}
+
+	#nav .menu li a {
+		padding: 0 12px;
+	}
+
+	#nav .menu .org {
+		display: none;
+	}
 }
 
 #userSetting {
@@ -399,11 +467,10 @@ body {
 #repoList .media-repo {
 	margin-top: @baseMargin+30px;
 	overflow: hidden;
-	height: 390px;
 }
 
 #repoList .repo-left {
-	height: 100%;
+	height: 405px;
 	background: #eaeaea;
 	padding: 0;
 	border-radius: 3px;
@@ -420,6 +487,7 @@ body {
 #repoList .repo-left span:first-child {
 	font-size: 16px;
 	border-radius: 3px 3px 0 0;
+	cursor: pointer;
 }
 
 #repoList .repo-left .bg-orange {
@@ -443,6 +511,11 @@ body {
 	background: #eaeaea;
 	vertical-align: top;
 	border-radius: 3px;
+	height: 200px;
+}
+
+#repoList .repo-body a:hover {
+	border: 1px solid #ff5400;
 }
 
 #repoList .repo-body a:nth-child(2n) {
@@ -859,7 +932,10 @@ body {
 	// padding: 12px 24px;
 }
 
-#createOrg .first-step input, #createOrg .first-step .save {
+#createOrg .first-step input, 
+#createOrg .first-step .save,
+#createOrg .second-step > input, 
+#createOrg .second-step .save, {
 	width: 100%;
 	height: 40px;
 	line-height: 40px;
@@ -870,10 +946,99 @@ body {
 	background: #d7d7d7;
 }
 
-#createOrg .first-step .save {
+#createOrg .first-step .save,
+#createOrg .second-step .save {
 	color: #fff;
 	background: #b3b3b3;
 	font-size: 16px;
+}
+
+#createOrg .team-list {
+	overflow: hidden;
+	margin-top: 30px;
+	margin-bottom: 45px;
+}
+
+#createOrg .teams, #createOrg .members {
+	width: 48.5%;
+	float: left;
+	background: #d7d7d7;
+	border-radius: 5px 5px 0 0;
+	padding-top: 10px;
+}
+
+#createOrg .teams {
+	margin-right: 3%;
+}
+
+#createOrg .teams .title,
+#createOrg .members .title {
+	height: 40px;
+	padding: 0 12px;
+}
+
+#createOrg .teams .title {
+	line-height: 40px;
+}
+
+#createOrg .teams li, 
+#createOrg .members li {
+	width: 100%;
+	padding: 10px 20px 10px 12px;
+	position: relative;
+}
+
+#createOrg .members li {
+	padding: 10px 20px 10px 20px;
+}
+
+#createOrg .teams li:last-child,
+#createOrg .members li:last-child {
+	border: none;
+}
+
+#createOrg .teams li:hover,
+#createOrg .members li:hover {
+	background: #b3b3b3;
+	color: #fff;
+}
+
+#createOrg .teams li i,
+#createOrg .members li i {
+	position: absolute;
+	right: 8px;
+	top: 2px;
+}
+
+#createOrg .members .title input,
+#createOrg .members .title .add, {
+	float: left;
+}
+
+#createOrg .members .title input {
+	width: 80%;
+	padding: 8px;
+	border-radius: 5px 0 0 5px;
+	background: #eaeaea;
+}
+
+#createOrg .members .title .add {
+	width: 20%;
+	float: left;
+	padding: 9px 0 8px;
+	text-align: center;
+	background: #ff5400;
+	border-radius: 0 5px 5px 0;
+	color: #fff;
+	font-size: 16px;
+}
+
+#createOrg .to-repo {
+	padding: 6px 12px;
+	border-radius: 5px;
+	background: lightblue;
+	color: #fff;
+	cursor: pointer;
 }
 /* org create end */
 
